# lab-booking-system

./: .gitignore  LICENSE  README.md  database-backup.py  pyproject.toml
onlineCAL/: manage.py
onlineCAL/booking_portal/: apps.py  views.py
onlineCAL/onlineCAL/: settings.py  urls.py
server/: .gitignore  db.sqlite3  fixtures.json  manage.py
server/auth/: __init__.py  forms.py  urls.py
server/booking_portal/: add_time_slots.py  admin.py  apps.py  config.py  factories.py  forms.py  mail.py  models.py  permissions.py  urls.py  views.py
server/booking_portal/admin/: __init__.py  announcement.py  email.py  instrument.py  request.py  slot.py
server/booking_portal/forms/: __init__.py  aasform.py  admin.py  adminForms.py  betform.py  cdspectrophotometerform.py  dscform.py  edxrfform.py  fesemform.py  fields.py  ftirform.py  gcform.py  hplc_fdform.py  hplcform.py  lcmsform.py  lscmform.py  nmrform.py  portal.py  portal_forms.py  pxrdform.py  rheometerform.py  scxrdform.py  tcspcform.py  tgaform.py  userform.py  uvspectrophotometer.py  xpsform.py
server/booking_portal/migrations/: 0001_initial.py  0002_aas_bet_rheometer_tga.py  0002_auto_20200127_0924.py  0002_auto_20200320_1704.py  0002_auto_20201206_1926.py  0002_auto_20201208_1233.py  0002_auto_20201223_1559.py  0003_auto_20200127_0940.py  0003_auto_20201206_2057.py  0003_auto_20201223_1632.py  (+29 more)
server/onlineCAL/: config.py  forms.py  settings.py  urls.py  views.py  wsgi.py
server/templates/: about_us.html  announcements.html  base.html  base_card_content.html  email.html  home.html  instrument_form_base.html
(+136 files in other folders)
