[tool.poetry]
name = "online-CAL"
version = "0.1.0"
description = ""
authors = ["Ujjwal Raizada <ujjwalraizada@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.2"
django-filter = "^2.4.0"
django-admin-rangefilter = "^0.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
