[tool.poetry]
name = "online-CAL"
version = "0.1.0"
description = ""
authors = ["Ujjwal Raizada <ujjwalraizada@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.7"
django = "~3.2.0"
django-filter = "~2.4.0"
django-admin-rangefilter = "~0.6.3"
python-dotenv = "~0.15.0"
django-crispy-forms = "~1.11.0"
factory-boy = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
autopep8 = "^1.5.4"
coverage = "~5.5"
isort = "^5.9.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
